--- a/index.css
+++ b/index.css
@@ -25,7 +25,7 @@
 }
 .res-card {
     margin: 5px;
-    width: 200px;
+    width: 215px;
     
     
     padding: 5px;
@@ -52,4 +52,24 @@
 .filter-btn{
     cursor: pointer;
     margin: 5px;
+}
+
+.shimmer-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.shimmer-card {
+    margin: 20px;
+    width: 200px;
+    height: 400px;
+    background-color: #f0f0f0
+}
+.login {
+    padding: 0 20px;
+    cursor: pointer;
+}
+
+.filter {
+    display: flex;
 }
