--- a/index.css
+++ b/index.css
@@ -1,78 +1,3 @@
-.header {
-  display: flex;
-  justify-content: space-between;
-  border: 1px solid black;
-}
-.logo {
-  width: 100px;
-}
-
-.nav-items > ul {
-  font-size: 16px;
-  display: flex;
-  padding: 0px 20px;
-  list-style-type: none;
-}
-.nav-items > ul > li {
-  padding: 10px;
-  margin: 10px;
-}
-
-.res-container {
-  display: flex;
-  flex-wrap: wrap;
-}
-.res-card {
-  margin: 5px;
-  width: 215px;
-
-  padding: 5px;
-  h4 {
-    margin-top: 0px;
-    margin-bottom: 0px;
-    padding: 3px;
-  }
-}
-
-.res-card:hover {
-  cursor: pointer;
-  border: 1px solid black;
-}
-
-.search {
-  padding: 10px;
-}
-
-.res-logo {
-  width: 100%;
-  height: 150px;
-}
-.filter-btn {
-  cursor: pointer;
-  margin: 5px;
-}
-
-.shimmer-container {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.shimmer-card {
-  margin: 20px;
-  width: 200px;
-  height: 400px;
-  background-color: #f0f0f0;
-}
-.login {
-  padding: 0 20px;
-  cursor: pointer;
-}
-
-.filter {
-  display: flex;
-}
-
-.user-card {
-  padding: 10px;
-  border: 1px solid black;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
